third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/duplicate.stderr
TOML parse error at line 4, column 1
  |
4 | [a]
  | ^
invalid table header
duplicate key `a` in document root
